--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-scipy==1.5.4
-matplotlib==3.3.3
-pandas==1.1.5
-streamlit==0.77.0
-seaborn==0.11.1
-scikit_learn==0.24.1
+scipy
+matplotlib
+pandas
+streamlit
+seaborn
+scikit_learn
